[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/scripts/jobs/fuelEngines.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/defaultFont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/jobs/fuelEngine/background.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = ExtResource( 2 )

[node name="fuelEngines" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 320.0
margin_top = 180.0
margin_right = -320.0
margin_bottom = -180.0
texture = ExtResource( 3 )
expand = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_left = 1.0
margin_top = 6.0
margin_right = 1.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Fuel Engines"
align = 1
valign = 1

[node name="Fuel1" type="ColorRect" parent="."]
margin_left = 187.0
margin_top = 190.0
margin_right = 214.0
margin_bottom = 311.0
grow_horizontal = 0
grow_vertical = 0
rect_rotation = 180.0
rect_scale = Vector2( 1, 1e-05 )
color = Color( 0.752941, 0, 0, 1 )

[node name="Fuel2" type="ColorRect" parent="."]
margin_left = 230.0
margin_top = 190.0
margin_right = 257.0
margin_bottom = 311.0
grow_horizontal = 0
grow_vertical = 0
rect_rotation = 180.0
rect_scale = Vector2( 1, 1e-05 )
color = Color( 0.752941, 0, 0, 1 )

[node name="Eng1Fill" type="Button" parent="."]
margin_left = 260.0
margin_top = 107.0
margin_right = 320.0
margin_bottom = 167.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="Eng2Fill" type="Button" parent="."]
margin_left = 260.0
margin_top = 176.0
margin_right = 320.0
margin_bottom = 236.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "2"

[connection signal="button_down" from="Eng1Fill" to="." method="_button_down" binds= [ 1 ]]
[connection signal="button_up" from="Eng1Fill" to="." method="_button_up" binds= [ 1 ]]
[connection signal="button_down" from="Eng2Fill" to="." method="_button_down" binds= [ 2 ]]
[connection signal="button_up" from="Eng2Fill" to="." method="_button_up" binds= [ 2 ]]
